criacao layout e importação dados externos - highlight

--- a/css/layout.css
+++ b/css/layout.css
@@ -8,9 +8,9 @@
     flex-direction: row;
 }
 
-.flex-wrap {
+/*.flex-wrap {
     flex-wrap: wrap;
-}
+}*/
 
 .justify-center {
     justify-content: center;
