--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 .flex-column {
     display: flex;
     flex-direction: column;
@@ -23,6 +30,7 @@
 .align-center {
     align-items: center;
 }
+
 
 .hidden {
     display: none;
